nuova implementazione della grafica della home
